# kuwahara-filters

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
kuwahara_filters/: __init__.py  anisotropic.py  classic.py  generalized.py
notebooks/: anisotropic_kuwahara.ipynb  classic_kuwahara.ipynb  examples.ipynb  generalized_kuwahara.ipynb
