[project]
name = "kuwahara-filters"
version = "0.1.0"
description = ""
authors = [
    {name = "SaharaSurfer",email = "topbo3abp@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors
# F: pyflakes
# I: isort (сортировка импортов)
# B: flake8-bugbear (полезные баги)
# UP: pyupgrade (обновление синтаксиса)
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
